# aegis-protocol

./: .gitignore  ALIGNMENT_FINAL_REPORT.md  CMakeLists.txt  CODE_CHANGES_SUMMARY.md  LICENSE  NOTICE  README.md  SECURITY_BUILD_ALIGNMENT.md  aegisSDK.py  aegis_adapter.py  aegis_autogen_integration.py  aegis_crewai_integration.py  aegis_langgraph_integration.py  aegis_protocol_nemo_integration.py  canonical_payload.md  classifier.cpp  classifier.h  e2e-example.cpp  handshake-exaple.cpp  handshake.h  key_management.md  main.py  merge_and_cleanup_instructions.txt  merge_resolution_summary.txt  passport-example.cpp  project_structure.txt  pubkey_rotation_policy.md  remove_e2e_and_commit_to_main.txt  resolve_merge_conflicts.txt  session.h  test_aegis_adapter.py
bindings/: aegis_protocol_bindings.cpp  aegis_protocol_v2_bindings.cpp
core/aegis/: audit_vault.hpp  consensus.h  handshake.h  multi_party_issuance.h  passport.h  policy.h  vault.h
include/: aegis_protocol.h  classifier.h  crypto_utils.h
include/aegis/core/: project_structure.txt  transparency_log.h
include/aegis/integration/: datadog_logger.h  redis_shared_store.h  redis_vault_backend.h
include/aegis/sidecar/: aegis_guard.h
include/uml001/: bft_clock_client.h  classifier.h  clock.h  consensus.h  crypto_facade.h  crypto_mode.h  globals.h  handshake.h  hash_provider.h  key_rotation.h  key_rotation_manager.h  memory_clock_store.h  multi_party_issuance.h  ntp_observation_fetcher.h  passport.h  platform.h  policy.h  redis_shared_store.h  remote_quorum_clock.h  rest_auth_config.h  rest_handlers.h  revocation.h  session.h  shared_state.h  simple_hash_provider.h  strong_clock.h  temporal_state.h  transparency_log.h  vault.h
include/uml001/bft/: remote_quorum_clock.h
include/uml001/core/: bft_clock_client.h  clock.h  clock_store.h  event_logger.h  handshake.h  mock_clock.h  passport.h  policy.h  pulse_manager.h  registry.h  session.h  strong_clock.h  temporal_state.h
include/uml001/crypto/: crypto_facade.h  crypto_utils.h  hash_provider.h  simple_hash_provider.h
include/uml001/integration/: datadog_logger.h  redis_shared_store.h  redis_vault_backend.h
include/uml001/security/: audit_vault.h  ivault_backend.h  key_manager.h  key_rotation.h  key_rotation_manager.h  multi_party_issuance.h  revocation.h  transparency_log.h  vault.h  zk_proofs.h
include/uml001/sidecar/: aegis_guard.h
legacy/: aegis_core.cpp  uml001_bindings.cpp
proto/: clock_service.proto
python/aegis_protocol/adapters/: aegis_adapter.py
python/aegis_protocol/integrations/: aegis_autogen_integration.py  aegis_crewai_integration.py  aegis_langgraph_integration.py  aegis_protocol_memory_integration.py  aegis_protocol_nemo_integration.py
schemas/: aegis_protocol.schema.json  audit-vault.schema.json  bft_client_config.schema.json  bft_clock_client_config.schema.json  bft_clock_request.schema.json  bft_clock_response.schema.json  bft_time_request.schema.json  bft_time_response.schema.json  canonical_payload.schema.json  crypto_envelope.schema.json  daemon_config.schema.json  error_response.schema.json  ipc_request.schema.json  ipc_response.schema.json  ipc_response_hmac.schema.json  kms_key_record.schema.json  policy.schema.json  registry.schema.json  revocation-record.schema.json  sidecar_api_response.schema.json  sidecar_health.schema.json  sidecar_response.schema.json  transparency_entry.schema.json
sdks/python/: handshake.schema.json  main.py  passport.schema.json  policy-rule.schema.json  pyproject.toml  registry-v0.1.json  registry.schema.json  semantic-score.schema.json  test_integration.py  vault-entry.schema.json
sdks/python/aegis/: __init__.py  classifier.py  consensus.py  crypto.py  exceptions.py  handshake.py  passport.py  policy.py  session.py  vault.py
sdks/python/aegis_langgraph/: __init__.py
sdks/python/aegis_protocol_sdk/: README.md  e2e_example.py  pyproject.toml  setup.py
sdks/python/aegis_protocol_sdk/aegis_protocol/: __init__.py  classifier.py  clock.py  consensus.py  crypto_utils.py  exceptions.py  handshake.py  incident.py  multi_party.py  multi_party_issuance.py  passport.py  policy.py  revocation.py  session.py  transparency_log.py  vault.py
sdks/python/aegis_protocol_sdk/tests/: __init__.py  tests.py
spec/schemas/: handshake.schema.json  passport.schema.json  policy-rule.schema.json  semantic-score.schema.json  vault-entry.schema.json
src/: aegis_core.cpp  aegis_protocol_v2.cpp  bft_clock_client.cpp  classifier.cpp  e2e-example.cpp  globals.cpp  main_aegis_protocol.cpp  rest_server.cpp
src/bft/: remote_quorum_clock.cpp
src/bindings/: main_bindings.cpp
src/core/: passport.cpp  policy.cpp  pulse_manager.cpp  quorum_pulse_manager.cpp  registry.cpp  remote_quorum_clock.cpp  session.cpp  temporal_state.cpp  transparency_log.cpp
src/crypto/: crypto_facade.cpp  crypto_utils.cpp  hash_provider.cpp  simple_hash_provider.cpp
src/deprecated/: e2e-example.cpp
src/providers/: datadog_logger.cpp  memory_clock_store.cpp  redis_shared_store.cpp  redis_vault_backend.cpp
src/security/: key_manager.cpp  revocation.cpp  transparency_log.cpp  vault.cpp
src/sidecar/: aegis_guard.cpp
tests/: aegis_protocol_v2_tests.py  test_aegis_adapter.py  test_aegis_core.py  test_aegis_optional_modules.py  test_passport_flow.cpp  test_passport_flow.py  test_swarm_resilience.cpp
tests/pytest/: test_aegis_adapter.py  test_aegis_core.py  test_aegis_optional_modules.py
