[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "aegis-protocol"
version     = "0.1.0"
description = "UML-001: A security protocol for autonomous AI agent communication"
readme      = "README.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.10"

keywords = [
    "ai-agents", "multi-agent", "security", "semantic",
    "policy-engine", "audit", "UML-001",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core has no dependencies beyond the stdlib
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.26"]
cli  = ["click>=8.1"]
dev  = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.26",   # for HTTP backend tests
    "click>=8.1",    # for CLI tests
]

[project.urls]
Homepage    = "https://github.com/RandWhyTheQAGuy/aegis-protocol"
Repository  = "https://github.com/RandWhyTheQAGuy/aegis-protocol"
Issues      = "https://github.com/RandWhyTheQAGuy/aegis-protocol/issues"
Docs        = "https://aegis-protocol.dev/docs"

[project.scripts]
aegis = "aegis_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true
